<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.mfritsch.ucsmilleniumfalcon.MainActivity">

    <item
        android:id="@+id/action_connect"
        android:orderInCategory="10"
        android:title="@string/action_connect"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_language"
        android:orderInCategory="20"
        android:title="@string/action_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_log"
        android:orderInCategory="30"
        android:title="@string/action_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="40"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
